# rck-2025

./: middleware.ts  package.json  pnpm-lock.yaml
app/: global-error.tsx  globals.css  layout.tsx  page.tsx
app/dashboard/: error.tsx  page.tsx
app/my/: page.tsx
app/reports/: error.tsx  page.tsx
app/upload/: error.tsx  page.tsx
components/: ClientErrorBoundary.tsx
data/2025-10-17/: new-list.txt  news-next.txt
data/2025-10-20/: dart.txt  (+4 more)
jikimi/: .gitignore  API_EXAMPLES.md  ASSUMPTIONS.md  CHANGELOG_INTELLIGENCE.md  DATABASE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENCE_CREATION.md  Makefile  PROJECT_OVERVIEW.md  README.md  REAL_PRICES.md  SQL_IMPLEMENTATION.md  env.template  pyproject.toml  quickstart.sh  test_intelligence_creation.sh  test_real_prices.sh  verify.py
jikimi/app/: __init__.py  auth.py  config.py  deps.py  errors.py  main.py  models.py
jikimi/app/repositories/: base.py  companies_repo.py  dart_repo.py  holdings_repo.py  news_repo.py  prices_repo.py  social_repo.py
jikimi/app/routers/: companies.py  holdings.py  intelligence.py  market.py  prediction.py
jikimi/app/schemas/: common.py  company.py  holdings.py  intelligence.py  market.py  prediction.py
jikimi/app/services/: prediction.py  sentiment.py  stock_data.py
jikimi/app/utils/: hashing.py  pagination.py  time.py
jikimi/db/: QUICKSTART.md  README.md  cleanup.sql  schema.sql  seed.sql
jikimi/tests/: __init__.py  test_pagination.py  test_prediction_schema.py  test_prices_router.py
lib/: bootstrap.ts  cache.ts  fs.ts  http.tsx  market.ts  mock.ts  parser.ts  report.ts  safeMode.ts  types.ts
(+39 files in other folders)
